--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@motionone/utils": "^10.18.0",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.25",
     "gsap": "^3.12.5",
@@ -22,7 +24,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.3.0",
+    "react-tsparticles": "^2.12.2",
     "react-type-animation": "^3.2.0",
+    "react-use-measure": "^2.1.7",
     "sass": "^1.74.1",
     "sass-loader": "^14.1.1",
     "styled-components": "^6.1.15",
